...
                            <constraint firstItem="3AM-RG-OzC" firstAttribute="leading" secondItem="AJ8-qu-k0N" secondAttribute="leading" id="DFN-AD-4Xa"/>
                            <constraint firstItem="3AM-RG-OzC" firstAttribute="top" secondItem="AJ8-qu-k0N" secondAttribute="top" id="YIp-Sp-IIp"/>
                            <constraint firstItem="3AM-RG-OzC" firstAttribute="trailing" secondItem="AJ8-qu-k0N" secondAttribute="trailing" id="z8n-xJ-Zic"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="AJ8-qu-k0N"/>
                    </view>
                    <navigationItem key="navigationItem" title="Movies List" id="vMf-6u-ehX">
                        <barButtonItem key="backBarButtonItem" title="Movies List" id="il6-Is-kNe"/>
                    </navigationItem>
                    <connections>
                        <outlet property="collVwMoviesList" destination="3AM-RG-OzC" id="a8D-Dl-26e"/>
                        <segue destination="30e-Gy-JPJ" kind="show" identifier="PushToDetailsPage" id="3CQ-dN-ypw"/>
                    </connections>
...
